--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,18 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,17 +22,53 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
-  }
+  } */
+
+/* body {
+  border: 1px solid #ccc;
+  width: 500px;
+  min-height: 600px;
+  padding: 10px;
+  display: flex;
+  line-height: 18px;
+  margin-bottom: 10px;
+
+} */
+
+/* .cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-gap: 20px;
+} */
+
+a {
+  font-size: smaller;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  height: 450px;
+  margin: auto;
+  text-align: start;
+  line-height: 1.7;
+  background-color: darkgrey;
+
+}
+
+footer {
+  box-sizing: content-box;
+  text-align: center;
 }
